# hackceler8-2023

./: .gitignore  README.md  client.py  constants.py  format.sh  log.py  ludicer.py  ludicer_gui.py  network.py  patches.md  requirements.txt  server.py
cheats/: astar.py  optimized_physics.py
cheats-rust/: Cargo.toml  pyproject.toml
cheats-rust/src/: env_modifier.rs  geometry.rs  hitbox.rs  lib.rs  moves.rs  objects.rs  physics.rs  search.rs  settings.rs  static_state.rs
components/: arena.py  door.py  env_element.py  exitarea.py  fire.py  fountain.py  inventory.py  magic_items.py  moving_platform.py  npc.py  ouch.py  player.py  projectile.py  textbox.py  wall.py  weapon.py
components/weapon_systems/: base.py  cannon.py  gun.py
engine/: animation.py  combat.py  generics.py  hitbox.py  map_switcher.py  modifier.py  physics.py  quadtree.py  sprite.py
game/: client.sh  map_parse.py  server.sh
game/ca/: generate_certs.sh  team6.crt  team6.key
game/game/: README.md  brainduck-moves.json  client.py  constants.py  log.py  ludicer.py  ludicer_gui.py  map_parse.py  network.py  prof  requirements.txt  save_state  scheduler.py  server.py
game/game/cheats/: main.py  maps.py  server.py  settings.py
game/game/components/: arena.py  boss.py  boss_gate.py  brainduck.py  coin.py  danmaku.py  door.py  duck.py  env_element.py  fountain.py  inventory.py  jam_session.py  logic.py  magic_items.py  moving_platform.py  music_note.py  ouch.py  player.py  portal.py  projectile.py  soul.py  speed_tile.py  spike.py  switch.py  textbox.py  (+1 more)
map_loading/: maps.py  tilemap.py
(+89 files in other folders)
