[package]
name = "cheats-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cheats_rust"
crate-type = ["cdylib"]

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
pyo3 = "0.19.0"
