[package]
name = "cheats-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cheats_rust"
crate-type = ["cdylib"]

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
hashbrown = "0.14.1"
pyo3 = "0.19.0"
static_init = "1.0.3"
